[EXOPS-48] Comments resolved
